syntax = "proto3";

option csharp_namespace = "Users";

package admins;

service Admins {
  rpc GetAll (PageData) returns (AdminsResponse);
  rpc GetById (AdminIdData) returns (AdminResponse);
  rpc Create (AdminCreateData) returns (AdminResponse);
  rpc Update (AdminUpdateData) returns (AdminResponse);
  rpc Delete (AdminIdData) returns (AdminResponse);
}

message PageData {
  string page = 1;
  string size = 2;
  string orderBy = 3;
}

message AdminIdData {
  string id = 1;
}

message AdminReadData {
  string id = 1;
  string username = 2;
  string email = 3;
  string emailConfirmed = 4;
  optional string phoneNumber = 5;
}

message AdminCreateData {
  string username = 1;
  string password = 2;
  string email = 3;
  optional string phoneNumber = 4;
}

message AdminUpdateData {
  string id = 1;
  AdminCreateData user = 2;
}

message AdminResponse {
  AdminReadData user = 1;
  AccountStatus status = 2;
}

message AdminsResponse {
  repeated AdminReadData users = 1;
  int32 totalCount = 2;
  AccountStatus status = 3;
}

enum AccountStatus {
  ACCOUNT_STATUS_SUCCESSFULL = 0;
  ACCOUNT_STATUS_ERROR_OCCURRED = 1;
}
